# ZecKit

./: .gitignore  CONTRIBUTING.md  LICENSE-APACHE  README.md  action.yml  docker-compose.prebuilt.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-images.yml  e2e-test.yml  example-usage.yml  generate-snapshot.yml  smoke-test.yml
cli/: Cargo.toml
cli/fixtures/: unified-addresses.json
cli/src/: error.rs  main.rs
cli/src/commands/: down.rs  e2e.rs  mod.rs  status.rs  test.rs  up.rs
cli/src/docker/: compose.rs  health.rs
docker/configs/: zcash.conf  zebra.toml  zebra.toml.bak
docker/healthchecks/: check-zebra.sh
docker/zaino/: Dockerfile
docker/zebra/: Dockerfile
docker/zingo/: Dockerfile  entrypoint.sh
faucet/: Dockerfile  Readme.md  requirements.txt
faucet/app/: __init__.py  config.py  main.py  wallet.py
faucet/app/routes/: __init__.py  faucet.py  health.py  stats.py
faucet/app/tests/: test_health.py
fixtures/: mining-address.txt  unified-addresses.json
sample-repo/: .gitignore  LICENSE  README.md
scripts/:  mine-to-wallet.sh  generate-snapshot.sh  linux-test-env.sh  mine-blocks.py  setup-dev.sh  setup-wsl-runner.sh
tests/e2e/: golden-flow.sh
tests/smoke/: basic-health.sh
zeckit-faucet/: Cargo.toml  Dockerfile
zeckit-faucet/api/: faucet.rs  health.rs  mod.rs  stats.rs
zeckit-faucet/src/: config.rs  error.rs  main.rs
zeckit-faucet/tests/: integration_test.rs  test_vectors.rs
zeckit-faucet/validation/: mod.rs  zebra_rpc.rs
zeckit-faucet/wallet/: history.rs  manager.rs  mod.rs
(+1 files in other folders)
